--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -3732,4 +3732,7 @@
   <data name="SHREDDER OPEN CYCLE" xml:space="preserve">
     <value>Ciclo di Apertura Prerompitore</value>
   </data>
+  <data name="Rotor Reverse (Floating Material)" xml:space="preserve">
+    <value>Inversione Rotore (Materiale Flottante)</value>
+  </data>
 </root>
