--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -4053,4 +4053,7 @@
   <data name="SHREDDER OPEN CYCLE" xml:space="preserve">
     <value>Shredder Open Cycle</value>
   </data>
+  <data name="Rotor Reverse (Floating Material)" xml:space="preserve">
+    <value>Rotor Reverse (Floating Material)</value>
+  </data>
 </root>
