--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -3730,6 +3730,12 @@
     <value>הגנה ראשונית של שנאי עזר</value>
   </data>
   <data name="SHREDDER OPEN CYCLE" xml:space="preserve">
-    <value>מחזור פתוח של מגרסה</value>
+    <value>ספירת מחזורי הגריסה הכוללת</value>
+  </data>
+  <data name="INFO_SYS_32" xml:space="preserve">
+    <value>תקלת חומרה בכרטיס קלט Plc-Safty. ודא שאין מעגלים קצרים בשטח בערוצי Estop או חיבורים גרועים על ידיות Estop. בדוק את מודול הקלט Safety Plc, אפס את האזעקה ו/או הפעל מחדש את מודול Plc</value>
+  </data>
+  <data name="Rotor Reverse (Floating Material)" xml:space="preserve">
+    <value>סיבוב הפוך (חומר צולל)</value>
   </data>
 </root>
