Update Localization ITA

--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -610,7 +610,7 @@
     <value>Portata</value>
   </data>
   <data name="FULL RANGE ADJUST" xml:space="preserve">
-    <value>Regolazione dell'Intero Intervallo</value>
+    <value>Regolazione del Fondo-Scala</value>
   </data>
   <data name="INTERLOCKS" xml:space="preserve">
     <value>Interblocchi</value>
