Add Portuguese language

--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -2896,7 +2896,7 @@
     <value>Bypass - Bassa velocità</value>
   </data>
   <data name="PUSHER FORWARD/REVERSE" xml:space="preserve">
-    <value>Pulsante avanti/indietro</value>
+    <value>Spintore avanti/indietro</value>
   </data>
   <data name="SHREDDER HOPPER LEVEL" xml:space="preserve">
     <value>Livello della tramoggia del trituratore</value>
@@ -2920,13 +2920,13 @@
     <value>DirezioneUno</value>
   </data>
   <data name="FORWARD" xml:space="preserve">
-    <value>Inoltrare</value>
+    <value>Avanti</value>
   </data>
   <data name="DIRECTIONTWO" xml:space="preserve">
     <value>Direzione Due</value>
   </data>
   <data name="REVERSE" xml:space="preserve">
-    <value>Inversione</value>
+    <value>Indietro</value>
   </data>
   <data name="SAFETY NOT OK" xml:space="preserve">
     <value>Sicurezza non OK</value>
@@ -2995,7 +2995,7 @@
     <value>(1=Avanti)</value>
   </data>
   <data name="(1=REVERSE)" xml:space="preserve">
-    <value>(1=Inverti)</value>
+    <value>(1=Indietro)</value>
   </data>
   <data name="COMMAND STANDSTILL RELAY RESET" xml:space="preserve">
     <value>Comando Ripristino Relè Di Arresto</value>
@@ -3004,7 +3004,7 @@
     <value>Ripristino Del Relè Di Arresto</value>
   </data>
   <data name="(1=RESET)" xml:space="preserve">
-    <value>(1=Reimposta)</value>
+    <value>(1=Reset)</value>
   </data>
   <data name="DISABLE COMPONENT ON START (SELECTOR)" xml:space="preserve">
     <value>Disabilita Componente All'Avvio (Selettore)</value>
@@ -3139,7 +3139,7 @@
     <value>Posizione Avanti Non Ok</value>
   </data>
   <data name="POSITION REVERSE NOT OK" xml:space="preserve">
-    <value>Posizione Inversa Non Ok</value>
+    <value>Posizione Indietro Non Ok</value>
   </data>
   <data name="BOTH POSITIONS" xml:space="preserve">
     <value>Entrambe Le Posizioni</value>
@@ -3505,7 +3505,7 @@
     <value>Unità Idraulica Spenta</value>
   </data>
   <data name="PUSHER NOT FORWARD" xml:space="preserve">
-    <value>Pulsante Non Avanti</value>
+    <value>Spintore Non Avanti</value>
   </data>
   <data name="PUSHER FORWARD POSITION REACHED" xml:space="preserve">
     <value>Posizione In Avanti Dello Spintore Raggiunta</value>
