--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -637,7 +637,7 @@
     <value>בדוק את מיקום לוח הרגל בשטח. העבר אותו למיקום עליון.</value>
   </data>
   <data name="INFO_AMP_1" xml:space="preserve">
-    <value>בדוק את אות חיישן בקרת האמפר ואת החיווט שלו בארון החשמל</value>
+    <value>עומס כבד על המנוע. החומר נעצר מחכה להורדת זרם מנועי</value>
   </data>
   <data name="INFO_AMP_2" xml:space="preserve">
     <value>הזרם המינימלי לא מושג! בדוק את נתיכים בקו הראשי, את המנתק המקומי ואת חיווט המנוע</value>
@@ -670,7 +670,7 @@
     <value>זוהה סיבוב הרוטור ללא פקודה! - אפס את האזעקה להפעלה מחדש. בדוק את החיווט אם תקלה מתמשכת</value>
   </data>
   <data name="INFO_INV_1" xml:space="preserve">
-    <value>בדוק את קוד התקלה של המהפך (בתצוגה שלו) בארון החשמל ואפס את היחידה</value>
+    <value>הודעת אזהרה קיימת בתצוגת המהפך. אנא בדוק את זה שיש פעולות אפשריות שיבוצעו מחדש למדריך למשתמש של המהפך.</value>
   </data>
   <data name="INFO_INV_2" xml:space="preserve">
     <value>ודא שהמהפך פועל במצב מרחוק! בדוק את אות המשוב "הפעלה" מהמהפך</value>
@@ -778,19 +778,19 @@
     <value>בדוק את חיישן הטמפרטורה, החיווט שלו בשטח, מערכת החימום וסידור הטמפרטורה</value>
   </data>
   <data name="INFO_LEVEL_1" xml:space="preserve">
-    <value>בדוק את חיישן המפלס, את החיווט שלו בשטח ואת משוב האותות שלו בארון החשמל</value>
+    <value>התהליך מחכה לשחזור הרמה בסדר.</value>
   </data>
   <data name="INFO_LEVEL_2" xml:space="preserve">
-    <value>בדוק את הופר. ודא שאין חסימה ו/או וודא את תקנת התהליך</value>
+    <value>בדוק את התנאים המקומיים והתקנה מכיוון שלא מתגלה רמת מינימום</value>
   </data>
   <data name="INFO_LEVEL_3" xml:space="preserve">
-    <value>בדוק את תנאי העבודה של המיכל ואת תקנת לולאת המים (פריקה)</value>
+    <value>המתן לרמות שיוחזרו בסדר לתהליך</value>
   </data>
   <data name="INFO_LEVEL_4" xml:space="preserve">
-    <value>בדוק את תנאי העבודה של המיכל ואת תקנת לולאת המים (מילוי)</value>
+    <value>הופר מלא! צריך לחכות שהופפר יתרוקן</value>
   </data>
   <data name="INFO_LEVEL_5" xml:space="preserve">
-    <value>בדוק את תנאי העבודה של הטנק. נוצרה חסימה חומרית אפשרית.</value>
+    <value>תיק גדול מלא וצריך להחליף אותו</value>
   </data>
   <data name="INFO_LEVEL_6" xml:space="preserve">
     <value>בדוק את תנאי העבודה של המיכל ואת תקנת לולאת המים (מילוי)</value>
@@ -835,10 +835,10 @@
     <value>נגד זרם נמוך! בדוק את החיווט והחלף את הנגד במידת הצורך!!! כוח אדם מיומן מורשה בלבד!!!</value>
   </data>
   <data name="INFO_GREASE_1" xml:space="preserve">
-    <value>מלאו מחדש את יחידת הגריז מעל לרמה המינימלית עם סוג השומן המתאים (ראה מדריך למשתמש)</value>
+    <value>יש למלא מחדש את מיכל השומן</value>
   </data>
   <data name="INFO_GREASE_2" xml:space="preserve">
-    <value>בדוק את לחץ האוויר ביחידת הגריז וודא שהשומן אכן הולך ליעד המיועד</value>
+    <value>בדוק את מערכת השימון וחיישן זרימת השומן.</value>
   </data>
   <data name="INFO_GREASE_3" xml:space="preserve">
     <value>אפשר את שסתום הסיכה במהלך הייצור</value>
@@ -1003,10 +1003,10 @@
     <value>לחצן ההפסקה המקומי של סדרן נלחץ. שחרר את הכפתור בלוח המקומי של סדרן</value>
   </data>
   <data name="INFO_BAG_1" xml:space="preserve">
-    <value>התיק הגדול מלא. זה צריך להשתנות.</value>
+    <value>הפעל בורר מאפשר לאפשר מקומי בשדה כדי לאפשר מילוי תיק גדול</value>
   </data>
   <data name="INFO_BAG_2" xml:space="preserve">
-    <value>תיק גדול כבר לא נוכח. בדוק בשטח את החיישן ואת המיקום של התיק הגדול</value>
+    <value>שתי התיקים לא בסדר לטעינה. החלף תיקים או אפשר להם למלא.</value>
   </data>
   <data name="INFO_BAG_3" xml:space="preserve">
     <value>אפס את מחסומי הבטיחות של תחנת התיק הגדול כדי לאפשר ניעור שקיות במהלך מחזור המילוי</value>
@@ -2716,7 +2716,7 @@
     <value>מצב פגום במורד הזרם</value>
   </data>
   <data name="INFO_DOWNSTR_STATUS" xml:space="preserve">
-    <value>Info_Downstr_Status</value>
+    <value>בדוק את המערכת במורד הזרם אם יש סטטוס פגום אפשרי</value>
   </data>
   <data name="DOWNSTREAM STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
     <value>מצב במורד הזרם בסדר (אות חיצוני)</value>
@@ -2755,10 +2755,10 @@
     <value>בדוק את מתג ה-Ethernet, את האספקה ​​והחיבורים שלו</value>
   </data>
   <data name="INFO_MIXER_1" xml:space="preserve">
-    <value>בדוק מעגל מים, שסתום מילוי מחדש, צינורות ומשאבת מים. דליפה אפשרית או חוסר מים.</value>
+    <value>אפשר מיקסר לפי הגדרות לייצור</value>
   </data>
   <data name="INFO_MIXER_2" xml:space="preserve">
-    <value>בדוק אם יש חסימה אפשרית בשסתום הפריקה של המיקסר, לחץ האוויר של השסתום ומשאבת הפריקה.</value>
+    <value>מכשירי מיקסר אל נמצאים בסמיאוטו. השבת מיקסר semiauto על ידי הגדרות לייצור</value>
   </data>
   <data name="INFO_MIXER_3" xml:space="preserve">
     <value>בדוק את מילוי המיקסר וצור קשר עם הסיוע המקוון של היצרן - המיקסר מושבת באופן אוטומטי</value>
@@ -2779,7 +2779,7 @@
     <value>בדוק את החיישן בשטח ונקה אותו</value>
   </data>
   <data name="INFO_GT_VALVES_1" xml:space="preserve">
-    <value>סגור לפחות אחד משסתומי הפריקה כדי למנוע התרוקנות מלאה של המיכל. בדוק את השסתומים בשטח.</value>
+    <value>יש למלא את הטנק לרמה מינימלית לפני תחילת מחזור הפריקה. בדוק תנאי תהליך והגדרות.</value>
   </data>
   <data name="INFO_GT_VALVES_2" xml:space="preserve">
     <value>מחזור פריקה לא יכול להימשך. בדוק את מיקום השסתום Ls פועל וממוקם במיקום הנכון ולא התרחשה חסימת שסתום.</value>
@@ -3438,9 +3438,6 @@
   <data name="CUMULATIVE - AT LEAST ONE ACTUATOR ON (MTRS, VLVS...)" xml:space="preserve">
     <value>מצטבר - לפחות מפעיל אחד מופעל (MTRs, VLVs...)</value>
   </data>
-  <data name="*** GROUP FULL PRODUCTION (DARK GREY COLOR) ***" xml:space="preserve">
-    <value>*** ייצור מלא בקבוצה (צבע אפור כהה) ***</value>
-  </data>
   <data name="CUMULATIVE - NON-CRITICAL ALARM PRESENT" xml:space="preserve">
     <value>מצטבר - נוכח אזעקה לא קריטית</value>
   </data>
@@ -3737,5 +3734,356 @@
   </data>
   <data name="Rotor Reverse (Floating Material)" xml:space="preserve">
     <value>סיבוב הפוך (חומר צולל)</value>
+  </data>
+  <data name="NO ACCESS LEVEL" xml:space="preserve">
+    <value>אין רמת גישה</value>
+  </data>
+  <data name="SIMULATED" xml:space="preserve">
+    <value>מדומה</value>
+  </data>
+  <data name="ABOUT" xml:space="preserve">
+    <value>על אודות</value>
+  </data>
+  <data name="MINIMIZE" xml:space="preserve">
+    <value>לְצַמְצֵם</value>
+  </data>
+  <data name="CUBEDICER" xml:space="preserve">
+    <value>קובדיקר</value>
+  </data>
+  <data name="CONFIGURATION" xml:space="preserve">
+    <value>תְצוּרָה</value>
+  </data>
+  <data name="TOTAL" xml:space="preserve">
+    <value>סה"כ</value>
+  </data>
+  <data name="PARTIAL" xml:space="preserve">
+    <value>חלקי</value>
+  </data>
+  <data name="ADVANCED" xml:space="preserve">
+    <value>מִתקַדֵם</value>
+  </data>
+  <data name="ELECTRICAL CABINET" xml:space="preserve">
+    <value>ארון חשמל</value>
+  </data>
+  <data name="PREVIERO READY TO RECEIVE" xml:space="preserve">
+    <value>Previero מוכן לקבל</value>
+  </data>
+  <data name="COOLING WATER" xml:space="preserve">
+    <value>מי קירור</value>
+  </data>
+  <data name="FEEDING ROLLERS" xml:space="preserve">
+    <value>גלילי האכלה</value>
+  </data>
+  <data name="CUT-ROTOR" xml:space="preserve">
+    <value>רוטור חתוך</value>
+  </data>
+  <data name="SAFETY KEY" xml:space="preserve">
+    <value>מפתח בטיחות</value>
+  </data>
+  <data name="OPEN PROCEDURE" xml:space="preserve">
+    <value>נוהל פתוח</value>
+  </data>
+  <data name="DOWNSTREAM READY TO RECEIVE" xml:space="preserve">
+    <value>במורד הזרם מוכן לקבל</value>
+  </data>
+  <data name="ATEX BARRIERS CONTROL" xml:space="preserve">
+    <value>בקרת מחסומי ATEX</value>
+  </data>
+  <data name="MOTOR ACTUAL SPEED TRANSDUCER BROKEN WIRE" xml:space="preserve">
+    <value>מנוע מתמר מהירות בפועל חוט שבור</value>
+  </data>
+  <data name="MOTOR ACTUAL SPEED FEEDBACK OUT OF RANGE" xml:space="preserve">
+    <value>משוב מהירות בפועל במנוע מחוץ לטווח</value>
+  </data>
+  <data name="THERMAL OVERLOAD COOLING FAN" xml:space="preserve">
+    <value>מאוורר קירור עומס יתר תרמי</value>
+  </data>
+  <data name="SPEED FEEDBACK" xml:space="preserve">
+    <value>משוב מהיר</value>
+  </data>
+  <data name="LOCAL MOTOR START REQUEST" xml:space="preserve">
+    <value>בקשת התחלת מנוע מקומית</value>
+  </data>
+  <data name="(1=START)" xml:space="preserve">
+    <value>(1 = התחלה)</value>
+  </data>
+  <data name="LOCAL MOTOR STOP REQUEST" xml:space="preserve">
+    <value>בקשת עצירת מנוע מקומית</value>
+  </data>
+  <data name="(0=STOP)" xml:space="preserve">
+    <value>(0 = עצירה)</value>
+  </data>
+  <data name="COMMAND COOLING" xml:space="preserve">
+    <value>פיקוד על קירור</value>
+  </data>
+  <data name="COMMAND COOLING FAN" xml:space="preserve">
+    <value>פיקוד על מאוורר קירור</value>
+  </data>
+  <data name="LAMP MOTOR ON" xml:space="preserve">
+    <value>מנוע מנורה הלאה</value>
+  </data>
+  <data name="(1=MTR ON)" xml:space="preserve">
+    <value>(1 = MTR ON)</value>
+  </data>
+  <data name="LAMP MOTOR OFF" xml:space="preserve">
+    <value>מנוע מנורה</value>
+  </data>
+  <data name="(1=MTR OFF)" xml:space="preserve">
+    <value>(1 = MTR OFF)</value>
+  </data>
+  <data name="_LOC_DIS" xml:space="preserve">
+    <value>ניתוק מקומי</value>
+  </data>
+  <data name="_LOC_SAFETY" xml:space="preserve">
+    <value>בטיחות מקומית</value>
+  </data>
+  <data name="_ENABLED" xml:space="preserve">
+    <value>מופעל</value>
+  </data>
+  <data name="_CYCLE_INTERLOCKS" xml:space="preserve">
+    <value>מחזור מחזור</value>
+  </data>
+  <data name="_CYCLE_IN_PROGRESS" xml:space="preserve">
+    <value>מחזור בתהליך</value>
+  </data>
+  <data name="_CYCLE_OK_FOR_PROCESS" xml:space="preserve">
+    <value>מחזור בסדר לתהליך</value>
+  </data>
+  <data name="MOTOR ACTUAL SPEED FEEDBACK TRANSDUCER BROKEN WIRE" xml:space="preserve">
+    <value>מנוע מהירות בפועל מתמר מתמר חוט שבור</value>
+  </data>
+  <data name="LOCAL SPEED CHANGE ROTOR" xml:space="preserve">
+    <value>מהירות מקומית שינוי רוטור</value>
+  </data>
+  <data name="(1=ONLY ROTOR, 0=ALL LINE)" xml:space="preserve">
+    <value>(1 = רק רוטור, 0 = כל השורה)</value>
+  </data>
+  <data name="LOCAL SPEED CHANGE ROLLS" xml:space="preserve">
+    <value>גלילי החלפת מהירות מקומית</value>
+  </data>
+  <data name="(1=ONLY ROLLS, 0=ALL LINE)" xml:space="preserve">
+    <value>(1 = רק גלילים, 0 = כל השורה)</value>
+  </data>
+  <data name="LOCAL SPEED INCREASE" xml:space="preserve">
+    <value>עליית המהירות המקומית</value>
+  </data>
+  <data name="(1=INC)" xml:space="preserve">
+    <value>(1 = Inc)</value>
+  </data>
+  <data name="LOCAL SPEED DECREASE" xml:space="preserve">
+    <value>מהירות מקומית יורדת</value>
+  </data>
+  <data name="(1=DEC)" xml:space="preserve">
+    <value>(1 = דצמבר)</value>
+  </data>
+  <data name="DEVICE NOT OK" xml:space="preserve">
+    <value>מכשיר לא בסדר</value>
+  </data>
+  <data name="DEVICE STATUS" xml:space="preserve">
+    <value>מצב מכשיר</value>
+  </data>
+  <data name="_DISABLED_BY_OP" xml:space="preserve">
+    <value>מושבת על ידי המפעיל</value>
+  </data>
+  <data name="_ON_OR_IN_PROGRESS" xml:space="preserve">
+    <value>על או בעיצומה</value>
+  </data>
+  <data name="OVERLOAD DIGITAL INPUT" xml:space="preserve">
+    <value>עומס יתר על קלט דיגיטלי</value>
+  </data>
+  <data name="OVERLOAD DIGITAL OUTPUT" xml:space="preserve">
+    <value>עומס יתר על פלט דיגיטלי</value>
+  </data>
+  <data name="OVERLOAD INTERNAL 24V DC" xml:space="preserve">
+    <value>עומס יתר פנימי 24V DC</value>
+  </data>
+  <data name="OVERLOAD EXTERNAL 24V DC" xml:space="preserve">
+    <value>עומס יתר על 24 וולט DC חיצוני</value>
+  </data>
+  <data name="BEACON OVERLOAD" xml:space="preserve">
+    <value>עומס יתר של משואה</value>
+  </data>
+  <data name="_ETH_SWITCH_OK" xml:space="preserve">
+    <value>מתג Ethernet אישור</value>
+  </data>
+  <data name="_DIGITAL_INPUTS_OK" xml:space="preserve">
+    <value>כניסות דיגיטליות בסדר</value>
+  </data>
+  <data name="_DIGITAL_OUTPUTS_OK" xml:space="preserve">
+    <value>תפוקות דיגיטליות בסדר</value>
+  </data>
+  <data name="_24V_INT_OK" xml:space="preserve">
+    <value>24V int בסדר</value>
+  </data>
+  <data name="_24V_EXT_OK" xml:space="preserve">
+    <value>24 וולט שלוחה בסדר</value>
+  </data>
+  <data name="OVERLOAD TRANSFORMER PRIMARY" xml:space="preserve">
+    <value>עומס יתר ראשוני</value>
+  </data>
+  <data name="OVERLOAD TRANSFORMER SECONDARY" xml:space="preserve">
+    <value>עומס יתר שנאי משני</value>
+  </data>
+  <data name="_ESTOP_PB_NOT_PRESSED" xml:space="preserve">
+    <value>Estop PB לא נלחץ</value>
+  </data>
+  <data name="_ONE_COMPONENT_ON" xml:space="preserve">
+    <value>רכיב אחד ב</value>
+  </data>
+  <data name="_GROUP_FULL_PRODUCTION" xml:space="preserve">
+    <value>קבוצה הפקה מלאה</value>
+  </data>
+  <data name="_ESTOP_AREA_STATUS_RESET_OK" xml:space="preserve">
+    <value>סטטוס אזור Estop איפוס אישור</value>
+  </data>
+  <data name="_ESTOP_AREA_PBS_NOT_PRESSED" xml:space="preserve">
+    <value>אזור Estop PBS לא נלחץ</value>
+  </data>
+  <data name="_DEVICE_IO_CONNECTED" xml:space="preserve">
+    <value>מכשיר IO מחובר</value>
+  </data>
+  <data name="_PLC_SIMULATION" xml:space="preserve">
+    <value>סימולציה של PLC</value>
+  </data>
+  <data name="_PLC_CABINET_TEST_MODE" xml:space="preserve">
+    <value>מצב בדיקת ארון PLC</value>
+  </data>
+  <data name="_PLC_SIMULATION_INIT" xml:space="preserve">
+    <value>סימולציה של PLC init</value>
+  </data>
+  <data name="HZ" xml:space="preserve">
+    <value>Hz</value>
+  </data>
+  <data name="ACTUAL FREQUENCY" xml:space="preserve">
+    <value>תדר בפועל</value>
+  </data>
+  <data name="LSH" xml:space="preserve">
+    <value>LSH</value>
+  </data>
+  <data name="LSL" xml:space="preserve">
+    <value>LSL</value>
+  </data>
+  <data name="LSHA" xml:space="preserve">
+    <value>LSHA</value>
+  </data>
+  <data name="LSHA_DELAY_ABOVE" xml:space="preserve">
+    <value>LSHA_DELAY_ABOVE</value>
+  </data>
+  <data name="LSLA" xml:space="preserve">
+    <value>LSLA</value>
+  </data>
+  <data name="LSLA_DELAY_BELOW" xml:space="preserve">
+    <value>LSLA_DELAY_BELOW</value>
+  </data>
+  <data name="HZ_RATIO_TARGET" xml:space="preserve">
+    <value>HZ_RATIO_TARGET</value>
+  </data>
+  <data name="HZ_RATIO_ACTUAL" xml:space="preserve">
+    <value>HZ_RATIO_ACTUAL</value>
+  </data>
+  <data name="SYNCHRONIZATION - TARGET RATIO FEEDER/ROTOR HZ" xml:space="preserve">
+    <value>סנכרון - מזין יחס יעד/רוטור HZ</value>
+  </data>
+  <data name="SYNCHRONIZATION - ACTUAL RATIO FEEDER/ROTOR HZ" xml:space="preserve">
+    <value>סנכרון - מזין יחס/רוטור HZ בפועל</value>
+  </data>
+  <data name="INFO_LEVEL_19" xml:space="preserve">
+    <value>רמה מקסימאלית מתמשכת! בדוק את הטנק, משאבת הדיכארס אם יש תקלה אפשרית וחיישן הרמה</value>
+  </data>
+  <data name="INFO_ACT_SPEED_1" xml:space="preserve">
+    <value>בדוק את חיווט אותות משוב מהירות</value>
+  </data>
+  <data name="INFO_ACT_SPEED_2" xml:space="preserve">
+    <value>המהירות בפועל המוטורית היא מחוץ לסובלנות. בדוק מנוע, שידור וחסימה אפשרית</value>
+  </data>
+  <data name="INFO_SYS_1" xml:space="preserve">
+    <value>צריך להפעיל מחדש את הרכיב</value>
+  </data>
+  <data name="INFO_LD_1" xml:space="preserve">
+    <value>יש לסגור את הקשר המקומי בהפעלה מחדש</value>
+  </data>
+  <data name="INFO_TEMP_1" xml:space="preserve">
+    <value>הטמפרטורה גבוהה מהצפוי.</value>
+  </data>
+  <data name="INFO_TEMP_2" xml:space="preserve">
+    <value>הטמפרטורה נמוכה מהצפוי.</value>
+  </data>
+  <data name="INFO_DISAB_1" xml:space="preserve">
+    <value>חיישן מושבת על ידי פעולה של מפעיל ב- HMI. בחר בתפריט פרמטרי החיישן המצוין כדי לאפשר אותו שוב.</value>
+  </data>
+  <data name="INFO_TEMP_3" xml:space="preserve">
+    <value>הטמפרטורה נמוכה מהצפוי - התהליך מופסק. קח את דגל הנעילה כדי להפעיל מחדש את התהליך אפילו עם טמפרטורה נמוכה</value>
+  </data>
+  <data name="INFO_SEL_1" xml:space="preserve">
+    <value>הפעל את הבורר הפעל מקומי בשדה להפעלה מחדש של המכשיר</value>
+  </data>
+  <data name="INFO_CALIBRATION_1" xml:space="preserve">
+    <value>חיישן צריך להיות מכויל מחדש על ידי שימוש בלוח Prevu. לחץ על תווית חיישן ובחר בתפריט ללמד.</value>
+  </data>
+  <data name="INFO_DOWNSTR_NOK" xml:space="preserve">
+    <value>Dowstream לא בסדר לתהליך - בדוק את הסיבה לבקשת עצירה מהותית מזרם במורד הזרם</value>
+  </data>
+  <data name="INFO_NO_MATERIAL" xml:space="preserve">
+    <value>אין חומר נוכח. בדוק אם יש האכלה ותנאי תהליכים</value>
+  </data>
+  <data name="INFO_EXT_1" xml:space="preserve">
+    <value>בדוק מפעל חיצוני כדי שיהיה מוכן לתת חומר שוב</value>
+  </data>
+  <data name="INFO_SOREMA_OK_1" xml:space="preserve">
+    <value>המתן לצמח סורמה כדי להתכונן לקבל חומר</value>
+  </data>
+  <data name="INFO_EXT_2" xml:space="preserve">
+    <value>בדוק את המערכת החיצונית כדי להפוך אותה לתהליך לתהליך</value>
+  </data>
+  <data name="INFO_WTR_TREAT_1" xml:space="preserve">
+    <value>בדוק את המערכת החיצונית לטיפול במים</value>
+  </data>
+  <data name="INFO_BRT_FAULTY" xml:space="preserve">
+    <value>בדוק את המצב הפגום של Debaler יחידה חיצונית ואיפוס תקלות באופן מקומי</value>
+  </data>
+  <data name="INFO_BRT_NOT_RUNNING" xml:space="preserve">
+    <value>בדוק את היחידה החיצונית של Debaler מכיוון שהיא לא מתחילה/פעילה</value>
+  </data>
+  <data name="INFO_NOT_IN_AUTO" xml:space="preserve">
+    <value>שים יחידה חיצונית של Debaler במצב אוטומטי</value>
+  </data>
+  <data name="INFO_SORTER_DISABLED" xml:space="preserve">
+    <value>יחידת מיון שתופעל על ידי הגדרה קודמת</value>
+  </data>
+  <data name="INFO_SORTER_WARNING" xml:space="preserve">
+    <value>בדוק סדרן בחיפוש אחר הודעות אבחון</value>
+  </data>
+  <data name="INFO_OIL_MIN_TEMP" xml:space="preserve">
+    <value>המתן לטמפרטורת המינימום של שמן שתושג על ידי שימוש בנגד חימום כדי לאפשר יחידה הידראולית</value>
+  </data>
+  <data name="INFO_OIL_FILTER" xml:space="preserve">
+    <value>החלף את מסנן השמן</value>
+  </data>
+  <data name="INFO_FLW_LOW" xml:space="preserve">
+    <value>מים נכנסים לשיעור זרימה נמוך מהצפוי. בדוק את לחץ כניסת המים או את השסתום הידני האפשרי שאינו פתוח לחלוטין.</value>
+  </data>
+  <data name="INFO_FILTER_PRESS_1" xml:space="preserve">
+    <value>מערכת העיתונות של סינון נפרדת על ידי מפעיל - עוקפים בין נעילות במעלה הזרם! - לחץ על תווית לחץ על תווית מסנן כדי להפעיל מחדש את הפילטר לחץ על נעילות למעלה הזרם</value>
+  </data>
+  <data name="INFO_FILTER_PRESS_2" xml:space="preserve">
+    <value>אם אף חומר אינו מכניס לחיצה על פילטר מכניס את עצמו למצב איטי כדי למנוע נמס חומר. המתן לחיזוק חומרי עבור פילטר לחץ על ריצה במלוא המהירות.</value>
+  </data>
+  <data name="INFO_FILTER_PRESS_3" xml:space="preserve">
+    <value>בדוק את לחץ על סנן בתצוגת HMI כדי לראות את הגורם לעצור חומר</value>
+  </data>
+  <data name="INFO_FILTER_PRESS_4" xml:space="preserve">
+    <value>בדוק את העיתונות לסנן חומר אפשרי קלוג</value>
+  </data>
+  <data name="INFO_FILTER_PRESS_5" xml:space="preserve">
+    <value>לסתות פתוחות למניעת נמס חומרים</value>
+  </data>
+  <data name="INFO_EXT_3" xml:space="preserve">
+    <value>בדוק יחידת סינון חיצונית מכיוון שהיא אינה מוכנה לקבל מים</value>
+  </data>
+  <data name="INFO_EXT_4" xml:space="preserve">
+    <value>בדוק יחידת סינון חיצונית מכיוון שהיא לא נשאבת לאחר בקשה</value>
+  </data>
+  <data name="INFO_DOWNSTR_SLOW_DWN" xml:space="preserve">
+    <value>מפעל במורד הזרם מבקש לאט קו. המתן למפעל במורד הזרם במלוא יכולת.</value>
   </data>
 </root>
